Mon Apr  4 23:37:05 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_struct): make at_exit a single linked list but
	  not RArray, not to mark the registered functions by the write
	  barrier.  based on the patches by Evan Phoenix.
	  [ruby-core:73908] [Bug #12095]

Mon Apr  4 17:43:45 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change deafult value of
	  RUBY_GC_HEAP_FREE_SLOTS_MIN_RATIO 0.3 -> 0.2
	  RUBY_GC_HEAP_FREE_SLOTS_MAX_RATIO 0.8 -> 0.65

	  These values are same as Ruby 2.0.0.

	  This change cause GC counts.
	  However, generational GC reduced each (minor) GC time and
	  increase memory locality. So that not so big impact on my
	  benchmarking results.
	  (surprizingly, this fix speed up programs on some cases)

	  You can change these values by environment variables
	  if you feel wrong.

Mon Apr  4 17:36:52 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c (get_envparam_double): take an upper_bound.

	  And also take an accept_zero flag which allow to accept zero
	  even if lower_bound is set.

	* gc.c (ruby_gc_set_params): fix parameters.

	  RUBY_GC_HEAP_FREE_SLOTS_MAX_RATIO set 0.9 as *lower_bound*, so that
	  it should be upper_bound.
	  Set RUBY_GC_HEAP_FREE_SLOTS_MIN_RATIO as lower bound.

	  Also set lower/upper bound of RUBY_GC_HEAP_FREE_SLOTS_GOAL_RATIO to
	  RUBY_GC_HEAP_FREE_SLOTS_MIN/MAX_RATIO.

Mon Apr  4 16:41:32 2016  Koichi Sasada  <ko1@atdot.net>

	* vm.c (Init_VM): should pass tokens.

Sun Apr  3 09:34:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flodivmod): round division if it is a finite number
	  and module is required.

	* numeric.c (dbl2ival): do not round here.

	* numeric.c (flo_ceil): use dbl2ival.

	* numeric.c (flo_round): round explicitly.

Sat Apr  2 15:24:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_check_arity): returns argc.

Fri Apr  1 20:58:33 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
